# noticias_falsas_humano_maquina_caracterizacao

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
contagem_silabas/: contagem_silabas.py
contagem_silabas/resultados/: estatisticas_silabas_nltk.csv  estatisticas_silabas_nltk_agrupado.csv  estatisticas_silabas_nltk_resumo.csv  estatisticas_silabas_nltk_testes_estatisticos.csv
parser/: export_sentence_rules.py  extract_grammar_rules.py  main.py  tfidf_rules.py  visualization.ipynb
parser/aggregated_output/comparacao_human_llm/: resumo_comparacao.txt  testes_estatisticos_regras.csv
parser/aggregated_output/human/: aggregated_grammar_summary.txt  per_file_statistics.txt
parser/aggregated_output/llm/: aggregated_grammar_summary.txt  per_file_statistics.txt
parser/portparser_results/fake_br_human/: 1.conllu  1.conllu.rep.tsv  10.conllu  10.conllu.rep.tsv  100.conllu  100.conllu.rep.tsv  1000.conllu  1000.conllu.rep.tsv  1001.conllu  1001.conllu.rep.tsv  1002.conllu  1002.conllu.rep.tsv  1003.conllu  1003.conllu.rep.tsv  1004.conllu  1004.conllu.rep.tsv  1005.conllu  (+6654 more)
parser/tfidf_output/: analysis_summary.txt  discriminative_rules_com_repeticao.txt  discriminative_rules_sem_repeticao.txt  top_rules_human_com_repeticao.csv  top_rules_human_sem_repeticao.csv  top_rules_llm_com_repeticao.csv  top_rules_llm_sem_repeticao.csv
sage/: sage_analysis.py
sage/resultados/: sage_relatorio_Humano_vs_Maquina.txt  sage_termos_Humano_vs_Maquina.csv
tagger/: pos_agregado_human_vs_llm.py
tagger/resultados_agregados/: resultados_agregados.csv
zipf/: zipf.ipynb
(+24355 files in other folders)
