[project]
name = "noticias-falsas-humano-maquina-caracterizacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
]
